@@ -87,3 +87,5 @@
 2017-01-06 Fred Gleason <fredg@paravelsystems.com>
 	* Moved 'src/rdlibraryb/librarymodel.cpp' and
 	'src/rdlibraryb/librarymodel.h' to 'src/common/'.
+2017-01-06 Fred Gleason <fredg@paravelsystems.com>
+	* Added rdlogeditb(1) in 'src/rdlogeditb/'.
